# clinic-doc-extractor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  ui.py
extract/: api.py  extractor.py  intake.py  llm.py  process.py  schemas.py  sheets.py  validate.py
samples/: 03_referral_root_canal.txt  04_referral_urgent.eml
scripts/: generate_samples.py
tests/: test_api.py  test_extractor.py  test_intake.py  test_process.py  test_schemas.py  test_sheets.py  test_validate.py
