[project]
name = "clinic-doc-extractor"
version = "0.1.0"
description = "Extract structured data from clinic intake forms and referral emails into Google Sheets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "google-auth>=2.0.0",
    "gspread>=6.0.0",
    "httpx>=0.28.1",
    "openai>=2.45.0",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "pytesseract>=0.3.10",
    "reportlab>=5.0.0",
    "streamlit>=1.59.1",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
